--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shreeji Marketing</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Shreeji Marketing  Project" />
+    <meta name="author" content="Shreeji Marketing" />
 
     <meta property="og:title" content="timber-canvas-web" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Shreeji Marketing Project" />
     <meta property="og:type" content="website" />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta
+    <!-- <meta
       name="twitter:image"
       content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    /> -->
   </head>
 
   <body>
