--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta
       name="google-site-verification"
       content="jg3BX9rXWP2e3ZFXhIBQ7-sRHRFDu54C7UzKGKj-J8I"
@@ -18,7 +19,14 @@
       property="og:image"
       content="https://lovable.dev/opengraph-image-p98pqg.png"
     /> -->
-
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "https://www.shreejimarketing.me/",
+        "logo": "https://www.shreejimarketing.me/favicon.png"
+      }
+    </script>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <!-- <meta
